# google-maps-reviews-scraper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  params.yaml  pyproject.toml  requirements.txt
src/: extract_data.py  fields.py  get_sponsored_links.js  gmaps.py  reviews_scraper.py  scraper.py  scraper_utils.py  sort_filter.py  time_utils.py  utils.py  write_output.py
